added welcome page and serpertaed the Pantry components into a sepearte Pantry page

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="http://localhost:3000/styles.css">
 </head>
 <body>
-    <h1> Welcome to the grocery tracker</h1>
+    <!-- <h1> Welcome to the grocery tracker</h1> -->
     <div id="root">
     </div>
 </body>
