res.locals.doc destructure

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery App</title>
-    <link rel="stylesheet" type="text/css" href="http://localhost:3000/styles.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:3000/red-lip.css">
 </head>
 <body>
     <!-- <h1> Welcome to the grocery tracker</h1> -->
